// Copyright Â© Aptos Foundation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package aptos.indexer.v1;

import "aptos/indexer/v1/raw_data.proto";
import "aptos/transaction/v1/transaction.proto";
import "aptos/util/timestamp/timestamp.proto";

message ActiveStream {
  optional string id = 1;
  optional uint64 current_version = 2;
  optional uint64 end_version = 3;
}

message StreamInfo {
  repeated ActiveStream active_stream = 1;
}

message LiveDataServiceInfo {
    optional aptos.util.timestamp.Timestamp timestamp = 1;
    optional uint64 known_latest_version = 2;
    optional StreamInfo stream_info = 3;
}

message HistoricalDataServiceInfo {
    optional aptos.util.timestamp.Timestamp timestamp = 1;
    optional uint64 known_latest_version = 2;
}

message FullNodeInfo {
}

message ServiceInfo {
  optional string address = 1;
  oneof service_type {
      LiveDataServiceInfo live_data_service_info = 2;
      HistoricalDataServiceInfo historical_data_service_info = 3;
      FullNodeInfo full_node_info = 4;
  }
}

message HeartbeatRequest {
  optional ServiceInfo service_info = 1;
}

message HeartbeatResponse {
  optional uint64 known_latest_version = 1;
}

message PingLiveDataServiceRequest {
  optional uint64 known_latest_version = 1;
}

message PingLiveDataServiceResponse {
  optional LiveDataServiceInfo service_info = 1;
}

message PingHistoricalDataServiceRequest {
  optional uint64 known_latest_version = 1;
}

message PingHistoricalDataServiceResponse {
  optional HistoricalDataServiceInfo service_info = 1;
}

service GrpcManager {
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    rpc GetTransactions(GetTransactionsRequest) returns (TransactionsResponse);
}

service LiveDataService {
  rpc Ping(PingLiveDataServiceRequest) returns (PingLiveDataServiceResponse);
  rpc GetTransactions(GetTransactionsRequest) returns (stream TransactionsResponse);
}

service HistoricalDataService {
  rpc Ping(PingHistoricalDataServiceRequest) returns (PingHistoricalDataServiceResponse);
  rpc GetTransactions(GetTransactionsRequest) returns (stream TransactionsResponse);
}
